--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "tutorial1",
-  "version": "0.1.0",
+  "name": "emilokanfakerreact",
+  "version": "0.1.1",
   "private": true,
+  "homepage": "https://akomspatrick.github.io/emilokanfakerreact",
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -16,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy":"gh-pages -d build",
+    "predeploy":"npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
